--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "child-nutrition-stats",
   "version": "0.1.0",
   "description": "A Lambda School build week project",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "develop": "nodemon index.js",
