--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "develop": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "jest --watch",
     "k:migrate": "knex migrate:latest",
     "k:makemigration": "knex migrate:make",
