--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
-    "knex-cleaner": "^1.1.4",
     "morgan": "^1.9.1",
     "pg": "^7.9.0"
   },
   "devDependencies": {
     "dotenv": "^7.0.0",
+    "faker": "^4.1.0",
     "jest": "^24.7.1",
     "nodemon": "^1.18.11"
   }
