--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest --watch",
+    "dev": "knex seed:run && nodemon index.js",
+    "test": "jest --watch --verbose",
     "k:migrate": "knex migrate:latest",
     "k:makemigration": "knex migrate:make",
     "k:rollback": "knex migrate:rollback",
@@ -22,6 +22,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
@@ -31,6 +32,7 @@
     "dotenv": "^7.0.0",
     "faker": "^4.1.0",
     "jest": "^24.7.1",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "supertest": "^4.0.2"
   }
 }
